src/main/metadata/objects/Email_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Tracking</relationshipLabel>
        <relationshipName>Email_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateBounced__c</fullName>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateClicked__c</fullName>
        <label>Date Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateOpened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateUnsubscribed__c</fullName>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HardBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Email Tracking</relationshipLabel>
        <relationshipName>Email_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SoftBounce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubjectLine__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Tracking</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>